NetBSD Problem Report #41295

From dhgutteridge@sympatico.ca  Tue Apr 28 08:03:01 2009
Return-Path: <dhgutteridge@sympatico.ca>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id B00C263C166
	for <gnats-bugs@gnats.netbsd.org>; Tue, 28 Apr 2009 08:03:01 +0000 (UTC)
Message-Id: <BLU0-SMTP78FDE81D95406AAB70684DB76E0@phx.gbl>
Date: Tue, 28 Apr 2009 03:02:53 -0400
From: "David H. Gutteridge" <dhgutteridge@sympatico.ca>
Reply-To:
To: gnats-bugs@netbsd.org
Subject: hp700/5.99.11 kernel panics on shutdown

>Number:         41295
>Category:       kern
>Synopsis:       hp700/5.99.11 kernel panics on shutdown
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    skrll
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Apr 28 08:05:00 +0000 2009
>Closed-Date:    Wed May 06 07:26:20 +0000 2009
>Last-Modified:  Wed May 06 07:26:20 +0000 2009
>Originator:     David H. Gutteridge
>Release:        
>Organization:

>Environment:

 NetBSD arcusiv.nonus-porta.net 5.99.11 NetBSD 5.99.11 (GENERIC) #0:  
 Sat Apr 25 03:30:06 UTC 2009  builds@b6.netbsd.org:/home/builds/ab/ 
 HEAD/hp700/200904240000Z-obj/home/builds/ab/HEAD/src/sys/arch/hp700/ 
 compile/GENERIC hp700

>Description:
 Hello,

 When rebooting a 5.99.11 kernel on my B180L, I'm getting the following
 panic:

 Apr 28 06:46:41 arcusiv syslogd: Exiting on signal 15
 syncing disks... done
 unmounting file systems... done
 cd0: detached
 sd0: detached
 scsibus1: detached
 audio0: detached
 scsibus0: detached
 lxtphy0: detached
 panic: There is no hp700_intr_disestablish()!
 Stopped in pid 347.1 (reboot) at        netbsd:cpu_Debugger 
 +0x10:       ldo     R
 '40(%r3),%r30
 db> bt
 cpu_Debugger() at netbsd:cpu_Debugger+0x10
 panic() at netbsd:panic+0x280
 dino_intr_disestablish() at netbsd:dino_intr_disestablish+0x28
 tlp_pci_detach() at netbsd:tlp_pci_detach+0x60
 config_detach() at netbsd:config_detach+0x208
 pmf_system_shutdown() at netbsd:pmf_system_shutdown+0x110
 cpu_reboot() at netbsd:cpu_reboot+0xc8
 sys_reboot() at netbsd:sys_reboot+0x84
 syscall() at netbsd:syscall+0x334
 -- syscall #208(0, 0, 70002260, 30285efc, ...)


>How-To-Repeat:
 Boot on a B180L, then reboot.

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: gnats-admin->kern-bug-people
Responsible-Changed-By: dholland@NetBSD.org
Responsible-Changed-When: Tue, 28 Apr 2009 08:36:56 +0000
Responsible-Changed-Why:
Fix mangled PR.


Responsible-Changed-From-To: kern-bug-people->skrll
Responsible-Changed-By: skrll@NetBSD.org
Responsible-Changed-When: Tue, 28 Apr 2009 08:57:45 +0000
Responsible-Changed-Why:
take


From: Nick Hudson <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41295 CVS commit: src/sys/arch/hp700/dev
Date: Wed, 29 Apr 2009 07:14:59 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Wed Apr 29 07:14:58 UTC 2009

 Modified Files:
 	src/sys/arch/hp700/dev: dino.c

 Log Message:
 Don't panic in dino_intr_disesablish. Just note that it needs to be
 implemented for now.

 Stop gap fix for PR/41295.


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 src/sys/arch/hp700/dev/dino.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Tue, 05 May 2009 06:39:27 +0000
State-Changed-Why:
OK to close?


From: "David H. Gutteridge" <dhgutteridge@sympatico.ca>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/41295 (hp700/5.99.11 kernel panics on shutdown)
Date: Wed, 6 May 2009 01:11:37 -0400

 On 5-May-09, at 2:39 AM, skrll@NetBSD.org wrote:

 > Synopsis: hp700/5.99.11 kernel panics on shutdown
 >
 > State-Changed-From-To: open->feedback
 > State-Changed-By: skrll@NetBSD.org
 > State-Changed-When: Tue, 05 May 2009 06:39:27 +0000
 > State-Changed-Why:
 > OK to close?

 Confirming I no longer get a panic with a recent kernel.

 Thanks,

 Dave

State-Changed-From-To: feedback->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Wed, 06 May 2009 07:26:20 +0000
State-Changed-Why:
Submitter happy to close. Thanks, Nick


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.