Don't panic in dino_intr_disesablish. Just note that it needs to be implemented for now.

Stop gap fix for PR/41295.